[package]
name = "cut_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "*"
crossterm = "*"

rand = "*"

log = "*"
log4rs = "*"

cyclic_list = { git = "https://github.com/HasinZaman/cyclic_list.git" }